--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   font-size: 1.2em;
   line-height: 1.5;
   margin: 0 auto 20px;
-  max-width: 600px;
+  max-width: 90%;
   color: #555;
 }
 
@@ -37,7 +37,7 @@ body {
   list-style: none;
   margin: 0 auto;
   padding: 0;
-  max-width: 600px;
+  max-width: 90%;
 }
 
 .section li {
