--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+* {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  animation-name: fadeIn;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+
 body {
   margin: 0;
   padding: 0;
