--- a/background.css
+++ b/background.css
@@ -4,4 +4,6 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  height: 100%;
+  width: 100%;
 }
