--- a/background.css
+++ b/background.css
@@ -4,6 +4,10 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 100%;
   width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
