--- a/background.css
+++ b/background.css
@@ -3,11 +3,16 @@ body {
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  width: 100%;
+}
+
+html {
   height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1;
+}
+
+body {
+  min-height: 100%;
+}
+
+#wrapper {
+  min-height: 100%;
 }
